--- a/content/post/2021-02-03-introducing-the-redwall-irs-soi-tax-dashboard/index.Rmd
+++ b/content/post/2021-02-03-introducing-the-redwall-irs-soi-tax-dashboard/index.Rmd
@@ -7,7 +7,7 @@ categories: ["Nutmeg Project", "R"]
 tags: ["connecticut", "shiny", "dataviz", "income"]
 ---
 
-[![](/img/irs_dash.png "IRS Tax Dashboard")](https://luceyda.shinyapps.io/irs_dash/)
+[![IRS Tax Dashboard Summary![IRS Tax Dashboard Summary]()](/img/irs_dash.png)](https://luceyda.shinyapps.io/irs_dash/)
 
 # Introduction {#introduction}
 
@@ -35,15 +35,15 @@ This is not a code-based post, but just a word about the filtering of locations,
 
 We were going to include the app in this blog post, but it is large and may take a little time to load, so please read the post and then follow the links to explore. When the app launches, it displays the aggregate AGI, tax paid, returns and unique zips for all of the data, included on the "Summary" table tab as shown at the beginning of the post. Choosing the "Income" tab, key component income sources, such as Salary, Dividends & Interest, Capital Gains, Business and Partnership Income and Pension & Social Security Income are displayed, can be explored over time.
 
-![](images/irs_dash_income.png "IRS Dash Income Tab")
+![IRS Dash Income Tab](images/irs_dash_income.png)
 
 By choosing the "Deductions tab, Total, State Taxes, Local Tax, Mortgage and Charitable Deductions in aggregate over time is displayed.
 
-![](images/irs_dash_deductions.png "IRS Deductions over Time")
+![IRS Deductions Tab](images/irs_dash_deductions.png)
 
 Using the three horizontal line icon at the top left, it is possible to access other tabs and filters. There is a second tab called "Charts" to see a plots of the change in AGI and tax rates over time. It is possible to see Aggregate or Per Capita by selecting with the "View" switch. The second tab also includes the "Compare" tab displaying the evolution of every state over time. Exact amounts or counts can be viewed by hovering with the tooltips.
 
-![](images/irs_dash_per_cap_agi.png "IRS Dash Per Capita AGI over Time")
+![IRS Dash Per Capita AGI Plot over Time](images/irs_dash_per_cap_agi.png)
 
 As mentioned above, it is possible to filter all of these tables and charts by State, Counties, Cities or all the way down to individual or groups of zip codes using the black tab on the left. There is also the option to select income bands (\$\<25k, \$25-50k, \$50-75, \$75-100k and \$\\100+). We would have liked to show more granularity above \$100k, but that would have meant showing a shorter time period. Given the richness of this data set and the incredible functionality of Shiny and the flexibility of `{golem}`, we hope to add many more avenues of exploration in the future.
 
